# rs_strscan

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  strscan.rs
